--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.0.0
   path: ^1.8.3
   image_picker: ^1.0.4
+  custom_radio_grouped_button: ^2.2.1
 
 dev_dependencies:
   flutter_test:
